# Persona-Forge-Psychology

./: README.md  custom_inference_server_explained.md  directory_structure.md  how_to_setup_en_vars.md  main.py  my_hardware_setup.md  orchestra_docker_main.py  orgniased_requirements.txt  pyproject.toml  requirements.txt
Docker/: Dockerfile  different_port_dockerfile.txt  docker-compose.orchestra.yml  docker-compose.test.yml  docker-compose.vllmtest.yml  docker-compose.yml
gpt-oss-service/: Dockerfile  config.yaml  custom_inference_server_explained.md  docker-compose.gpt-oss.yml  gpt_oss_api.py  requirements-gpt-oss.txt
hf_gpt_docker/: Dockerfile  config.yml
run_notes/: Why_avoid_smolagent_prompt_format.md  bartowski_on_oss.md  how_to_run_via_docker.md  pre_run_CLI  pre_run_CLI.md  refreshing_sandbox_embeddings.md  storing_per_chunk_sql.md
run_notes/dynamic_embedding_notes/: md  smolagents_nullable_debacle.md
src/: __init__.py  agent_requirements.txt
src/client/: __init__.py  agent.py  agent_router.py  gpt_oss_client.py  telemetry.py
src/client/ui/: chat.py  requirements.agent.txt
src/data/psych_metadata/: graph_schema.json  planning_initial_facts.yaml  psych_frameworks.md  validate_graph.py
src/executors/: docker_python_executor.py
src/states/: __init__.py  paths.py  persistence.py  shared_state.py
src/utils/: __init__.py  chunk_ids.py  config.py  embeddings.py  export_writer.py  io_helpers.py  metadata_embedder.py  ollama_utils.py  path_resolver.py  paths.py  prompts.py  session_paths.py  sqlite_helpers.py
tools/: __init__.py  code_tools.py  csv_tools.py  dataframe_storage.py  documentation_tools.py  graph_tools.py  help_tools.py  search_tools.py  sql_tools.py
triton/: docker-compose.yml  safetensors_to_onyx.py
vLLM/: docker-compose.test.yml  docker-compose.yml
(+16 files in other folders)
