[project]
name = "persona-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
   "ddgs>=8.0",
   "docker>=6.0",
   "e2b>=1.0",
   "e2b-code-interpreter>=1.0",
   "fastapi>=0.115.0",
   "gradio>=5.0",
   "gradio-client>=1.0",
   "hf-xet>=1.0",
   "langfuse>=3.0",
   "litellm>=1.0",
   "matplotlib>=3.0",
   "numpy>=2.0",
   "nvidia-cublas-cu12==12.6.4.1",
   "nvidia-cuda-cupti-cu12==12.6.80",
   "nvidia-cuda-nvrtc-cu12==12.6.77",
   "nvidia-cuda-runtime-cu12==12.6.77",
   "nvidia-cudnn-cu12==9.5.1.17",
   "nvidia-cufft-cu12==11.3.0.4",
   "nvidia-cufile-cu12==1.11.1.6",
   "nvidia-curand-cu12==10.3.7.77",
   "nvidia-cusolver-cu12==11.7.1.2",
   "nvidia-cusparse-cu12==12.5.4.2",
   "nvidia-cusparselt-cu12==0.6.3",
   "nvidia-nccl-cu12==2.26.2",
   "nvidia-nvjitlink-cu12==12.6.85",
   "nvidia-nvtx-cu12==12.6.77",
   "openai>=1.5.0",
   "openinference-instrumentation>=0.1.0",
   "openinference-instrumentation-smolagents>=0.1.0",
   "openinference-semantic-conventions>=0.1.0",
   "opentelemetry-api>=1.0",
   "opentelemetry-exporter-otlp>=1.0",
   "opentelemetry-exporter-otlp-proto-grpc>=1.0",
   "opentelemetry-exporter-otlp-proto-http>=1.0",
   "opentelemetry-instrumentation>=0.55b0",
   "opentelemetry-sdk>=1.0",
   "opentelemetry-semantic-conventions>=0.55b0",
   "pandas>=2.0",
   "pandas-stubs>=2.0",
   "plotly>=5.0",
   "pydantic>=2.0",
   "pydantic-core>=2.0",
   "python-dotenv>=1.0",
   "requests>=2.0",
   "smolagents[docker]>=1.0",
   "sqlalchemy>=1.0",
   "torch==2.7.0",
   "torchaudio==2.7.0",
   "torchvision==0.22.0",
   "transformers>=3.0",
   "triton>=2.0",
   "typer>=0.10.0",
   "uvicorn>=0.20.0",
]
